--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
-    <section>
+<section>
     <div class="container">
         <header>
             <div class="row">
@@ -32,7 +33,6 @@
                 </div>
             </div>
         </header>
-
         <div class="swiper">
             <div class="swiper-slide">
                 <div class="row">
@@ -43,13 +43,45 @@
                         <button type="button" class="btn button">Learn more</button>
                     </div>
                     <div class="col-1"></div>
-
                 </div>
-
             </div>
         </div>
     </div>
-
-    </section>
+</section>
+<div>
+    <div class="wwdo">What we do</div>
+    <div class="storyabout">Story about us</div>
+    <div class="redline">
+        <img src="img/redline.png" alt="red line">
+    </div>
+    <div class="textabout">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.
+    </div>
+</div>
+<div class="threeimg">
+    <div class="layer_44_bg">
+        <div class="layer_44">
+            <div class="Layer_44_icon">
+                <img src="./img/users.png" alt="users">
+            </div>
+            <div class="layer_44_text">Super team</div>
+        </div>
+    </div>
+    <div class="layer_39-41">
+        <img src="./img/Layer_39.png" alt="layer39">
+    </div>
+    <div class=layer_39-41>
+        <img src="./img/Layer_41.png" alt="layer41">
+    </div>
+</div>
+<div class="numbers">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
 </body>
 </html>
