--- a/index.html
+++ b/index.html
@@ -76,12 +76,27 @@
         <img src="./img/Layer_41.png" alt="layer41">
     </div>
 </div>
-<div class="numbers">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+<div class="greenbox">
+    <div>
+        <div class="greenbox-numbers">42</div>
+        <div class="greenbox-text">Web Design Projects</div>
+    </div>
+    <div>
+        <div class="greenbox-numbers">123</div>
+        <div class="greenbox-text">happy client</div>
+    </div>
+    <div>
+        <div class="greenbox-numbers">15</div>
+        <div class="greenbox-text">award winner</div>
+    </div>
+    <div>
+        <div class="greenbox-numbers">99</div>
+        <div class="greenbox-text">cup of coffee</div>
+    </div>
+    <div>
+        <div class="greenbox-numbers">24</div>
+        <div class="greenbox-text">members</div>
+    </div>
 </div>
 </body>
 </html>
